src/app.css
@import "tailwindcss";

@theme {
  --color-background: oklch(0.1656 0.04 291.05);
  --color-foreground: oklch(
    from var(--color-background) calc(l + 0.7) calc(c + 0.03) h
  );
  --color-muted: oklch(
    from var(--color-foreground) calc(l - 0.15) calc(c + 0.04) h
  );
  --color-accent: oklch(
    from var(--color-background) calc(l + 0.7) calc(c + 0.3) h
  );
  --color-border: oklch(from var(--color-foreground) calc(l - 0.5) c h);
  --color-card-background: oklch(
    from var(--color-background) calc(l + 0.03) c h
  );
  --color-card-background-lower: oklch(
    from var(--color-background) calc(l + 0.01) calc(c + 0.02) h
  );
  --color-pre-background: oklch(
    from var(--color-background) calc(l + 0.07) c h
  );
  --color-accent-link: oklch(
    from var(--color-accent) calc(l - 0.2) calc(c - 0.1) h
  );

  --font-body: "Funnel Display Variable", "M PLUS 1 Variable", sans-serif;
  --font-code: "Geist Mono Variable", "M PLUS 1 Variable", sans-serif;
}

html {
  @apply text-foreground;
  @apply font-body subpixel-antialiased;
}

/* Global scrollbar styling */
* {
  scrollbar-width: thin;
  scrollbar-color: var(--color-muted) var(--color-pre-background);
}

.markdown {
  @apply text-foreground leading-relaxed break-words;

  & > * + * {
    @apply mt-0 mb-4;
  }

  & li + li {
    @apply mt-1;
  }

  & li > p + p {
    @apply mt-6;
  }

  & strong {
    @apply font-semibold;
  }

  & a {
    @apply text-muted border-muted/50 hover:text-foreground border-b font-semibold;
  }

  & strong a {
    @apply font-bold;
  }

  & h1 {
    @apply mt-8 mb-4 text-4xl leading-tight font-semibold;
  }

  & h2 {
    @apply mt-10 mb-4 text-2xl leading-tight font-semibold;
  }

  & h3 {
    @apply mt-8 mb-4 text-xl leading-snug font-semibold;
  }

  & h4 {
    @apply mt-6 mb-4 text-base leading-none font-semibold;
  }

  & h5 {
    @apply mt-6 mb-4 text-sm leading-tight font-semibold;
  }

  & h6 {
    @apply mt-6 mb-4 text-sm leading-tight font-semibold;
  }

  & .heading-link {
    @apply text-muted/60 hover:text-muted mr-2 border-none font-normal no-underline;
  }

  & blockquote {
    @apply border-border text-muted border-l-4 pr-4 pl-4 text-base italic;
  }

  & code {
    @apply bg-pre-background border-border font-code inline rounded-lg border px-1 py-0.5 text-sm;
  }

  & pre {
    @apply bg-pre-background rounded-lg;
  }

  & pre code {
    @apply bg-pre-background border-border block overflow-x-scroll rounded-lg p-2;
  }

  & ul {
    @apply list-disc pl-8 text-base;
  }

  & ol {
    @apply list-decimal pl-8 text-base;
  }

  & kbd {
    @apply font-code inline-block rounded border px-1 py-5 align-middle text-xs font-normal shadow;
  }

  & table {
    @apply text-base;
  }

  & th {
    @apply border-border border px-3 py-1;
  }

  & td {
    @apply border-border border px-3 py-1;
  }

  & hr {
    @apply border-border my-6 border-1 border-dashed;
  }
}

